--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@exponent/ex-navigation": "^2.7.1",
 		"babel-eslint": "^7.1.1",
 		"babel-preset-react-native-stage-0": "^1.0.1",
+		"color": "^1.0.3",
 		"eslint": "^3.13.1",
 		"eslint-config-airbnb": "^14.0.0",
 		"eslint-plugin-import": "^2.2.0",
@@ -20,6 +21,7 @@
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
 		"react-native-code-push": "^1.15.0-beta",
+		"react-native-drawer": "^2.3.0",
 		"react-native-elements": "^0.9.2",
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.2",
