Added Material Theme

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
         "react-native"
     ],
     "rules": {
+        "prefer-const": 1,
         "no-underscore-dangle": "off",
+        "react/prefer-stateless-function": 1,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     },
     "settings": {
