Added Redux sauce

--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
 		"eslint-plugin-jsx-a11y": "^3.0.2",
 		"eslint-plugin-react": "^6.9.0",
 		"eslint-plugin-react-native": "^2.2.1",
+		"jimp": "^0.2.27",
 		"next-frame": "^0.2.3",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
 		"react-native-code-push": "^1.15.0-beta",
 		"react-native-drawer": "^2.3.0",
 		"react-native-elements": "^0.9.2",
+		"react-native-fs": "^2.1.0-rc.1",
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"redux-persist": "^4.0.1",
 		"redux-thunk": "^2.1.0",
+		"reduxsauce": "^0.4.1",
 		"remote-redux-devtools": "^0.5.7"
 	},
 	"devDependencies": {
