--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next-frame": "^0.2.3",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
+		"react-native-animatable": "^0.6.1",
 		"react-native-code-push": "^1.15.0-beta",
 		"react-native-elements": "^0.9.2",
 		"react-native-fs": "^2.1.0-rc.1",
