--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "rules": {
         "prefer-const": 1,
         "no-underscore-dangle": "off",
+        "import/no-extraneous-dependencies": 0,  
         "react/prefer-stateless-function": 1,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     },
