--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "NODE_ENV=production ava",
+		"lint:all": "npm run lint && npm run lint:test",
+		"lint": "eslint -c .eslintrc src/**/*.js",
+		"lint:test": "eslint tests/**/*.js"
 	},
 	"dependencies": {
 		"@exponent/ex-navigation": "^2.7.1",
-		"babel-eslint": "^7.1.1",
-		"babel-preset-react-native-stage-0": "^1.0.1",
 		"color": "^1.0.3",
-		"eslint": "^3.13.1",
-		"eslint-config-airbnb": "^14.0.0",
-		"eslint-plugin-import": "^2.2.0",
-		"eslint-plugin-jsx-a11y": "^3.0.2",
-		"eslint-plugin-react": "^6.9.0",
-		"eslint-plugin-react-native": "^2.2.1",
 		"jimp": "^0.2.27",
 		"next-frame": "^0.2.3",
 		"react": "~15.4.0-rc.4",
@@ -32,15 +27,37 @@
 		"redux-persist": "^4.0.1",
 		"redux-thunk": "^2.1.0",
 		"reduxsauce": "^0.4.1",
-		"remote-redux-devtools": "^0.5.7"
+		"seamless-immutable": "^7.0.1"
 	},
 	"devDependencies": {
-		"babel-jest": "18.0.0",
+		"ava": "^0.17.0",
+		"babel-eslint": "^7.1.1",
 		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "~15.4.0-rc.4"
+		"babel-preset-react-native-stage-0": "^1.0.1",
+		"enzyme": "^2.7.0",
+		"eslint": "^3.13.1",
+		"eslint-config-airbnb": "^14.0.0",
+		"eslint-plugin-import": "^2.2.0",
+		"eslint-plugin-jsx-a11y": "^3.0.2",
+		"eslint-plugin-react": "^6.9.0",
+		"eslint-plugin-react-native": "^2.2.1",
+		"mockery": "^2.0.0",
+		"nyc": "^10.1.2",
+		"react-native-mock": "^0.2.8",
+		"react-test-renderer": "~15.4.0-rc.4",
+		"remote-redux-devtools": "^0.5.7"
 	},
-	"jest": {
-		"preset": "react-native"
+	"ava": {
+		"files": [
+			"tests/**/*.js",
+			"!tests/setup.js"
+		],
+		"require": [
+			"babel-register",
+			"babel-polyfill",
+			"react-native-mock/mock",
+			"./tests/setup"
+		],
+		"babel": "inherit"
 	}
 }
