Added Debug Keystoreg

--- a/android/keystores/debug.keystore.properties
+++ b/android/keystores/debug.keystore.properties
@@ -1,4 +1,4 @@
 key.store=debug.keystore
-key.alias=androiddebugkey
-key.store.password=android
-key.alias.password=android
+key.alias=readgit
+key.store.password=123456
+key.alias.password=123456
