--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,24 @@
-language: node_js
-node_js:
-  - "7.4"
-  - "7"
-  - "6"
-  - "5"
+language: android
+before_install: #1.1
+- nvm install 6
+- node --version
+- git clone https://github.com/facebook/buck.git
+install: #1.2
+- npm install
+android: #1.3
+  components:
+  - build-tools-23.0.1
+  - android-23
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - addon-google_apis-google-16
+
+script:
+  - npm run lint:all
+  - npm test
+  - cd android && ./gradlew assembleDebug
 
 cache:
   directories:
     - node_modules
-
-install: npm install
-script:
-  - npm run lint:all
-  - npm test
