--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
 language: android
+
+env:
+  matrix:
+    - NODE_VERSION=7
+    - NODE_VERSION=6
+    - NODE_VERSION=5
+
 before_install: #1.1
-- nvm install 6
+- nvm install ${NODE_VERSION}
 - node --version
 - git clone https://github.com/facebook/buck.git
 install: #1.2
 - npm install
 android: #1.3
   components:
+  - build-tools-25.0.3
+  - build-tools-25.0.2
   - build-tools-23.0.1
+  - android-25
   - android-23
   - extra-android-m2repository
   - extra-google-google_play_services
@@ -17,7 +27,8 @@ android: #1.3
 script:
   - npm run lint:all
   - npm test
-  - cd android && ./gradlew assembleDebug
+  - cd android && ./gradlew copyDownloadableDepsToLibs && cd ..
+  - ./bin/buck build android/app
 
 cache:
   directories:
