--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,12 @@ install: #1.2
 - npm install
 android: #1.3
   components:
-  - build-tools-23.0.3
   - build-tools-23.0.1
   - android-23
   - extra-android-m2repository
   - extra-google-google_play_services
   - extra-google-m2repository
-  - addon-google_apis-google-16
+  - addon-google_apis-google-23
 
 script:
   # - npm run lint:all
@@ -31,3 +30,4 @@ script:
 cache:
   directories:
     - node_modules
+    - /home/travis/.gradle/
