--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 before_install: #1.1
 - nvm install ${NODE_VERSION}
 - node --version
-# - git clone https://github.com/facebook/buck.git
+- git clone https://github.com/facebook/buck.git
 install: #1.2
 - npm install
 android: #1.3
@@ -22,10 +22,11 @@ android: #1.3
   - addon-google_apis-google-23
 
 script:
-  # - npm run lint:all
-  # - npm test
+  - npm run lint:all
+  - npm test
   - cd android && ./gradlew copyDownloadableDepsToLibs && cd ..
   - ./bin/buck build android/app
+  # - if [[ "$NODE_VERSION" = 7 ]]; then sh upload.sh; fi
 
 cache:
   directories:
