--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+# jdk: oraclejdk8
 
 env:
   matrix:
@@ -14,7 +15,15 @@ install: #1.2
 - npm install
 android: #1.3
   components:
+  # - tools
+  # - platform-tools
+  # - tools
+  # - build-tools-25.0.3
+  # - build-tools-25.0.1
+  # - build-tools-23.0.3
   - build-tools-23.0.1
+  # - android-25
+  # - android-24
   - android-23
   - extra-android-m2repository
   - extra-google-google_play_services
@@ -25,7 +34,7 @@ script:
   - npm run lint:all
   - npm test
   - cd android && ./gradlew copyDownloadableDepsToLibs && cd ..
-  - ./buck/bin build android/app
+  - ./buck/bin/buck build android/app
   # - if [[ "$NODE_VERSION" = 7 ]]; then sh upload.sh; fi
 
 notifications:
