--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,17 @@ android: #1.3
   - tools
   - platform-tools
   - tools
-  # - build-tools-25.0.3
-  # - build-tools-25.0.1
-  # - build-tools-23.0.3
+  - build-tools-25.0.3
+  - build-tools-25.0.1
+  - build-tools-23.0.3
   - build-tools-23.0.1
-  # - android-25
-  # - android-24
+  - android-25
+  - android-24
   - android-23
   - extra-android-m2repository
   - extra-google-google_play_services
   - extra-google-m2repository
+  - addon-google_apis-google-24
   - addon-google_apis-google-23
 
 script:
