--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
 		"lint:all": "npm run lint && npm run lint:test",
 		"lint": "eslint -c .eslintrc src/**/*.js",
 		"lint:test": "eslint tests/**/*.js",
+		"cleanApk": "rm android/app/build/outputs/apk/*.apk",
+		"assembleRelease": "cd android && ./gradlew assembleRelease && cd ..",
+		"signRelease": "jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore android/keystores/debug.keystore android/app/build/outputs/apk/app-release-unsigned.apk readgit",
+		"alignRelease": "/home/prijindal/softwares/android-sdk-linux/build-tools/25.0.1/zipalign -v 4 android/app/build/outputs/apk/app-release-unsigned.apk android/app/build/outputs/apk/app-release.apk",
+		"release": "npm run cleanApk && npm run assembleRelease && npm run signRelease && npm run alignRelease",
 		"emulator": "emulator -avd NexusS",
 		"intall": "adb install android/app/outputs/apk/android-debug.apk",
 		"intent": "adb shell am start -a android.intent.action.MAIN -n com.starterapp/.MainActivity"
