--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
 		"next-frame": "^0.2.3",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
-		"react-native-animatable": "^0.6.1",
-		"react-native-code-push": "^1.15.0-beta",
-		"react-native-elements": "^0.9.2",
+		"react-native-animatable": "^1.1.0",
+		"react-native-code-push": "^1.16.1-beta",
+		"react-native-elements": "^0.9.3",
 		"react-native-fs": "^2.1.0-rc.1",
-		"react-native-text-input-layout": "https://github.com/dantman/react-native-text-input-layout",
+		"react-native-text-input-layout": "^0.0.5",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
-		"redux-persist": "^4.0.1",
-		"redux-thunk": "^2.1.0",
+		"redux-persist": "^4.1.0",
+		"redux-thunk": "^2.2.0",
 		"reduxsauce": "^0.4.1",
 		"seamless-immutable": "^7.0.1"
 	},
@@ -44,8 +44,8 @@
 		"babel-eslint": "^7.1.1",
 		"babel-preset-react-native": "1.9.1",
 		"babel-preset-react-native-stage-0": "^1.0.1",
-		"enzyme": "^2.7.0",
-		"eslint": "^3.13.1",
+		"enzyme": "^2.7.1",
+		"eslint": "^3.14.0",
 		"eslint-config-airbnb": "^14.0.0",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^3.0.2",
