--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,7 +143,8 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
     compile "com.facebook.react:react-native:+"
     compile project(':react-native-code-push')
     compile project(':react-native-vector-icons')
