--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-native-code-push": "^1.16.1-beta",
 		"react-native-elements": "^0.9.3",
 		"react-native-fs": "^2.1.0-rc.1",
+		"react-native-material-ui": "^1.6.0",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.2",
