Added Gradle properties conf

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,9 @@
 
 android.useDeprecatedNdk=true
 org.gradle.jvmargs=-Xmx2048M
+READGIT_DEBUG_STORE_FILE=debug.keystore
+READGIT_DEBUG_KEY_ALIAS=readgit
+READGIT_DEBUG_STORE_PASSWORD=123456
+READGIT_DEBUG_KEY_PASSWORD=123456
+org.gradle.daemon=true
+
