--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"intent": "adb shell am start -a android.intent.action.MAIN -n com.starterapp/.MainActivity"
 	},
 	"dependencies": {
-		"@exponent/ex-navigation": "^2.7.1",
 		"color": "^1.0.3",
 		"faker": "^3.1.0",
 		"react": "~15.4.0-rc.4",
@@ -26,6 +25,7 @@
 		"react-native-animatable": "^1.1.0",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
+		"react-navigation": "^1.0.0-beta.1",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"redux-persist": "^4.1.0",
