--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"color": "^1.0.3",
 		"faker": "^3.1.0",
 		"fixed-size-queue": "^1.0.1",
+		"next-frame": "^0.2.3",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
 		"react-native-animatable": "^1.1.0",
