--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"faker": "^4.1.0",
 		"fixed-size-queue": "^1.0.1",
 		"next-frame": "^0.2.3",
-		"react": "~15.4.0-rc.4",
-		"react-native": "0.42.0",
+		"react": "next",
+		"react-native": "next",
 		"react-native-animatable": "^1.1.0",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
