Specified Exact versions of react and react and react native

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"faker": "^4.1.0",
 		"fixed-size-queue": "^1.0.1",
 		"next-frame": "^0.2.3",
-		"react": "next",
-		"react-native": "next",
+		"react": "^16.0.0-alpha.4",
+		"react-native": "^0.43.0-rc.2",
 		"react-native-animatable": "^1.1.0",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
