--- a/.flowconfig
+++ b/.flowconfig
@@ -15,10 +15,10 @@
 .*/Libraries/react-native/ReactNative.js
 
 ; React navigation library
-.*/node_modules/react-navigation/**.*
+;.*/node_modules/react-navigation/**.*
 
 ; React Native
-.*/node_modules/react-native/.*
+;.*/node_modules/react-native/.*
 
 [include]
 
@@ -49,4 +49,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 unsafe.enable_getters_and_setters=true
 
 [version]
-^0.38.0
+^0.41.0
