--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile "com.facebook.react:react-native:+"
     compile project(':react-native-vector-icons')
+    compile project(':react-native-interactable')
 }
 
 // Run this once to be able to run the application with BUCK
