--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react": "^16.0.0-alpha.4",
 		"react-native": "^0.43.0-rc.2",
 		"react-native-animatable": "^1.1.0",
+		"react-native-interactable": "^0.0.4",
 		"react-native-uuid": "^1.4.9",
 		"react-native-vector-icons": "^4.0.0",
 		"react-navigation": "^1.0.0-beta.7",
